--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   crypto: ^3.0.1
   local_auth: ^2.0.0
   flutter_riverpod: ^1.0.3
+  firebase_messaging: ^11.2.13
+  flutter_local_notifications: ^9.4.0
+  overlay_support: ^1.2.1
+  crypton: ^2.0.3
 
 dev_dependencies:
   flutter_test:
